# vaccel-plugin-template

./: NOTICE  README.md  meson.build
.github/linters/: cppcheck.txt
.github/workflows/: pr-build-and-verify.yml  pr-trailers.yml
src/: meson.build  vaccel.c
